2011-08-09  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* Add add_itk_imfilter_template.sh (v0.1.0):

	- Script to automatically create templates and modify
	ItkImFilter.cpp to add a new ITK filter to itk_imfilter(). This
	script only creates the basic skeleton. Specific parameters,
	methods, etc for the filter need to be added by hand.

	- This first version only copies the templates from
	MexTemplateFilter.*, and updates the ChangeLog, but doesn't modify
	the code to tailor it to the new filter.

	* Add ItkToolbox/MexTemplateFilter.hpp,
	ItkToolbox/MexTemplateFilter.cpp:

	- Template files to help add support for new filters to
	itk_imfilter().

	* ItkToolbox/ItkImFilter.cpp (v0.4.1):

	- Use shortname and longname of every filter instead of hardcoded
	strings. Add macro ISFILTER() to make the code cleaner.

	- Method CopyMatlabInputsToItkImages() has been renamed as
	CopyMatlabInputToItkImage().

	* ItkToolbox/MexBaseFilter.hpp (v0.4.2):
	* ItkToolbox/MexBaseFilter.cpp (v0.3.8):

	- Rename method CopyMatlabInputsToItkImages() as
	CopyMatlabInputToItkImage(), as there can be only 1 image at the
	input. Also, this method should not be virtual.

	- Add shortname and longname strings. BaseFilter cannot be invoked
	by the user, but the definitions are necessary when we use
	EXCLUDEFILTER().

	* ItkToolbox/MexBinaryDilateImageFilter.cpp (v0.1.3):
	* ItkToolbox/MexDanielssonDistanceMapImageFilter.cpp (v0.3.4):
	* ItkToolbox/MexBinaryThinningImageFilter3D.cpp (v0.1.4):
	* ItkToolbox/MexSignedMaurerDistanceMapImageFilter.cpp (v0.2.4):

	- Add shortname and longname strings to every filter, so that we
	don't need to hardcode in ItkImFilter.cpp the string that a user
	can type to invoke a filter.

	* ItkToolbox/MexBinaryDilateImageFilter.hpp (v0.1.3):
	* ItkToolbox/MexDanielssonDistanceMapImageFilter.hpp (v0.3.4):
	* ItkToolbox/MexBinaryThinningImageFilter3D.hpp (v0.2.6):
	* ItkToolbox/MexSignedMaurerDistanceMapImageFilter.hpp (v0.2.5):
